--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<img src = ""/>
+<img src = "https://i.guim.co.uk/img/media/2589fa711843a42405ae233b71f85ead362f6659/0_103_2160_1296/master/2160.jpg?width=300&quality=85&auto=format&fit=max&s=a52d11a9ace574f1927043f8f66a6032"/>
 
 </body>
 </html>
